[package]
name = "raw-nbt"
version = "0.1.1"
authors = ["Igaguri <igagurimk@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
description = "A low-level NBT(Named Binary Tag) parser for Rust."
documentation = "https://docs.rs/raw-nbt"
readme = "README.md"
repository = "https://github.com/IgaguriMK/raw-nbt"
keywords = ["minecraft", "nbt", "decoder"]
category = "encoding"
exclude = ["testdata"]

[dependencies]

[dev-dependencies]
flate2 = { version = "1.0.5", features = ["rust_backend"], default-features = false }